[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.5.1"
bincode = "1.3.3"
ggrs = "0.9.4"
macroquad = "0.4"
macroquad-tiled = "0.2"
matchbox_socket = "0.6.1"
serde = "1.0.180"
slotmap = { version = "1.0.6", features = ["serde"] }
uuid = "1.4.1"
