[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
async-executor = "1.5.1"
bincode = "1.3.3"
ggrs = "0.9.4"
matchbox_socket = "0.6.1"
serde = "1.0.180"
uuid = "1.4.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
